# my_package

./: .gitignore  README.md  license.txt  pyproject.toml
my_package/: __init__.py  module1.py  version.py
my_package.egg-info/: PKG-INFO  SOURCES.txt
